--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
   border-radius: 5px;
   cursor: pointer;
 }
+.login-form button:hover{background-color: rgb(39, 39, 39);color:#fff;}
 
 .right img {
   width: 100%;
